teaser heading updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,28 +9,25 @@ body {
 }
 h1 {
 	margin: auto;
-	text-align: center;
+	/* text-align: center; */
+}
+.logo {
+	padding: 0.2em;
+	font-size: 22px;
 	font-family: "simplified_arabic_fixedRg", sans-serif;
 }
-.blink {
-	-webkit-animation: blink 0.8s steps(5, start) infinite;
-	animation: blink 0.8s steps(5, start) infinite;
-	transition: animation 0.7s;
+.logo:after {
+	content: "_";
+	animation: blink 1.25s steps(2) infinite;
 }
 
 @keyframes blink {
 	0% {
-		visibility: visible;
-	}
-	100% {
-		visibility: hidden;
+		opacity: 0;
 	}
 }
 @-webkit-keyframes blink {
 	0% {
-		visibility: visible;
-	}
-	100% {
-		visibility: hidden;
+		opacity: 0;
 	}
 }
